refactor: Update mode toggle text to use a dedicated span element and increment app version.

--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -131,8 +131,9 @@
 
     <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-100 py-4">
         <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
-            <button id="mode-toggle"
-                class="text-lg font-medium tracking-tight hover:opacity-70 transition-opacity">Dislikes</button>
+            <button id="mode-toggle" class="text-lg font-medium tracking-tight hover:opacity-70 transition-opacity">
+                <span id="mode-text">Dislikes</span>
+            </button>
 
             <div class="flex items-center gap-2">
                 <div id="auth-indicator" class="hidden flex items-center gap-4 text-sm mr-2">
