--- a/birds/index.html
+++ b/birds/index.html
@@ -345,6 +345,9 @@
 </head>
 
 <body>
+    <a href="/"
+        style="position: absolute; top: 20px; left: 20px; color: var(--accent-warm); text-decoration: none; font-weight: 500; font-size: 0.9rem; opacity: 0.8; z-index: 10;">←
+        cowneck</a>
 
     <div class="container">
         <header>
