--- a/games/index.html
+++ b/games/index.html
@@ -40,6 +40,7 @@
             letter-spacing: 3px;
             background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             text-shadow: 0px 0px 20px rgba(79, 172, 254, 0.3);
         }
@@ -172,6 +173,9 @@
 </head>
 
 <body>
+    <a href="/"
+        style="position: absolute; top: 20px; left: 20px; color: #555; text-decoration: none; font-size: 0.9rem; transition: color 0.2s;">←
+        cowneck</a>
     <header>
         <h1>cowneck games</h1>
         <p class="subtitle">Select a game to load</p>
