--- a/dislikes/index.html
+++ b/dislikes/index.html
@@ -124,6 +124,12 @@
             animation: shimmer 1.5s infinite linear;
             border-radius: 2px;
         }
+
+        @media (display-mode: standalone) {
+            .home-link {
+                display: none !important;
+            }
+        }
     </style>
 </head>
 
@@ -132,7 +138,8 @@
     <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-100 py-4">
         <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center gap-3">
-                <a href="/" class="text-gray-300 hover:text-black transition-colors" title="Back to cowneck.com">
+                <a href="/" class="home-link text-gray-300 hover:text-black transition-colors"
+                    title="Back to cowneck.com">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="m15 18-6-6 6-6" />
